    - in the last menu, if cancelling from selecting a MUA to edit the report,
      just go back to the menu and don't crash; thanks to Elie Roux for the
      report; Closes: #562853
    - don't ask to choose a UI when there is only one choice; thanks to Olaf van
      der Spek for the report and to Carl Chenet for the patch; Closes: #567501

 -- Sandro Tosi <morph@debian.org>  Wed, 10 Mar 2010 20:53:39 +0100

reportbug (4.10.2) unstable; urgency=low

  * reportbug/utils.py
    - allow 'Source' as pseudo-header; thanks to Cyril Brulebois for the report;
      Closes: #566989

 -- Sandro Tosi <morph@debian.org>  Tue, 26 Jan 2010 23:51:23 +0100

reportbug (4.10.1) unstable; urgency=low

  * bin/reportbug
    - import LICENSE from reportbug, so --license won't trigger an error
  * reportbug/utils.py
    - fix broken '--mutt' CLI/config-file option by using a new variable, adding
      the 'mutt' 'if' branch, and the 'get_name()' in MUA class; thanks to
      Julien Cristau for the report; Closes: #564253

 -- Sandro Tosi <morph@debian.org>  Mon, 11 Jan 2010 19:56:44 +0100

reportbug (4.10) unstable; urgency=low

  * conf/reportbug.conf, man/reportbug.conf.5
    - added 'keyid' documentation; thanks to gregor herrmann for the report and
      to Carl Chenet for the partial patch; Closes: #558364
  * bin/querybts
    - use optparse instead of getopt to parse CLI options and arguments;
      Closes: #559677
    - warn users for options not available in querybts (because they are
      reportbug-only); thank to Marc-Jano Knopp, Josh Triplett and Tim Connors
      for the reports and to Carl Chenet for the patch; Closes: #501285
  * reportbug/ui/text_ui.py
    - if help option is selected in debconf values inclusion menu, the second
      message doesn't contain newline, it's fixed now; thanks to Miroslaw
      Zalewski for the report; Closes: #560302
    - retrieve the package information from the report using doing a lower-case